[project]
name = "LaST"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.11.0",
    "einops>=0.8.1",
    "fvcore>=0.1.5.post20221221",
    "h5netcdf>=1.7.3",
    "hickle>=5.0.3",
    "ipykernel>=7.1.0",
    "lightning>=2.5.0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "opencv-python>=4.12.0.88",
    "rich>=14.2.0",
    "scikit-image>=0.25.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "wandb>=0.23.0",
    "xarray>=2025.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
