[project]
name = "LaST"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.11.0",
    "einops>=0.8.1",
    "fvcore>=0.1.5.post20221221",
    "h5netcdf>=1.7.3",
    "hickle>=5.0.3",
    "ipykernel>=7.1.0",
    "lightning==2.5.0.post0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "opencv-python>=4.12.0.88",
    "rich==13.9.4",
    "scikit-image>=0.25.2",
    "timm==0.9.16",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "wandb>=0.23.0",
    "xarray>=2025.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
